<resources>
    <string name="app_name">Chat</string>
    <string name="Language" />
    <string name="Email" />
    <string name="email">Email</string>
    <string name="language">Language</string>
    <string name="Password">Password</string>
    <string name="new_password">New Password</string>
    <string name="already_an_user">Already an user?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="post">POST</string>
</resources>